--- a/data/i/writings.yaml
+++ b/data/i/writings.yaml
@@ -1,4 +1,9 @@
 - article:
+    name: 興味深い道と場所
+  book:
+    name: WORD 52 号
+    href: https://www.word-ac.net/post/2022/0811-word52/
+- article:
     name: Coq の基礎の基礎
   book:
     name: WORD 51 号
