--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = 'https://www.yusuke.pub/'
 languageCode = 'ja-jp'
 title = 'public_yusuke'
 disableKinds = ['categories', 'tags', 'taxonomy', 'term']
-ignoreErrors = ["error-disable-taxonomy"]
+ignoreErrors = ['error-disable-taxonomy']
 
 [params]
 latestWorksDisplayingCount = 3
