--- a/data/i/profile.yaml
+++ b/data/i/profile.yaml
@@ -1,7 +1,7 @@
 name: public_yusuke
 bio: D 言語とコンピュータが好きです。
 likes:
-  - name: 競技プログラミング
+  - name: 長距離ドライブ
   - name: ゲーム
     children:
       - name: 弐寺
@@ -18,4 +18,5 @@ likes:
     children:
       - name: ステラのまほう
       - name: まちカドまぞく
+  - name: 競技プログラミング
   - name: コンピュータ
