--- a/data/i/activities.yaml
+++ b/data/i/activities.yaml
@@ -1,3 +1,7 @@
+- name: ICTトラブルシューティングコンテスト2024 学生運営委員
+  links:
+    - href: https://icttoracon.net/
+      label: 公式サイト
 - name: ICTトラブルシューティングコンテスト2023 優勝（C）
   links:
     - href: https://icttoracon.net/
